# django-training

./: RESULTS.md  pyproject.toml  requirements.txt
musicplatform/: .gitignore  db.sqlite3
musicplatform/account/: urls.py
musicplatform/albums/: admin.py  form.py  models.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_alter_song_audio_file_alter_song_image.py  0002_remove_album_creation_datetime.py  0003_album_created_album_modified.py
musicplatform/albums/templates/album/: newAlbum.html
musicplatform/artists/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py
musicplatform/artists/templates/artist/: displayArtists.html
musicplatform/authentication/: serializers.py  urls.py  views.py
musicplatform/musicplatform/: settings.py  urls.py
musicplatform/users/: admin.py  models.py  serializers.py  urls.py  views.py
musicplatform/users/migrations/: 0001_initial.py
